# linux_library_nx-drm-allocator

./: .gitignore  Makefile  Makefile.am  allocator.c  build.sh  configure.ac  nx-drm-allocator.h
debian/: changelog  control  nx-drm-allocator-dev.install  nx-drm-allocator.install  rules
packaging/: nx-drm-allocator.spec
